update yaml spec
