# src/openapi/api/api.yaml
@@ -4,7 +4,7 @@ info:
   version: 0.0.1
 servers: [
   {
-    "url": "http://localhost:8080",
+    "url": "http://localhost:8000",
     "description": "local development server",
   },
 ]
@@ -36,7 +36,7 @@ paths:
                 $ref: "./book.yaml#/components/schemas/book"
       responses:
         "200":
-          description: get list of books
+          description: create a new book
           content:
             application/json:
               schema:
@@ -66,7 +66,7 @@ paths:
       operationId: GET-book-copies
       responses:
         "200":
-          description: get one book based on item id
+          description: get all copies of this book in circulation
           content:
             application/json:
               schema:
@@ -92,16 +92,21 @@ paths:
       operationId: GET-book-copy
       responses:
         "200":
-          description: get one book based on item id
+          description: get one copy of a book
           content:
             application/json:
               schema:
                 $ref: "./book.yaml#/components/schemas/book"
     patch:
       operationId: PATCH-book-copy
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "./book.yaml#/components/schemas/book"
       responses:
         "200":
-          description: get one book based on item id
+          description: update information on one book
           content:
             application/json:
               schema:
@@ -117,12 +122,18 @@ paths:
       operationId: GET-users
       responses:
         "200":
-          description: get list of books
+          description: get list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "./user.yaml#/components/schemas/user"
     post:
       operationId: POST-users
       responses:
         "200":
-          description: get list of books
+          description: get list of users
         "400":
           description: bad request, bad data
         "409":
@@ -132,12 +143,12 @@ paths:
       operationId: GET-user
       responses:
         "200":
-          description: get list of books
+          description: get one user information
     patch:
       operationId: PATCH-user
       responses:
         "200":
-          description: get list of books
+          description: update user information
     delete:
       operationId: DELETE-user
       responses:
@@ -155,18 +166,18 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "./user.yaml#/components/schemas/user"
+                  $ref: "./borrow.yaml#/components/schemas/borrow"
     post:
       operationId: POST-user-borrows
       responses:
         "201":
-          description: create a new borrow for this user
+          description: create a borrow for this user
   /users/{user-id}/borrows/{borrow-id}:
     get:
       operationId: GET-user-borrow
       responses:
         "200":
-          description: get list of books
+          description: get all the borrow information of this user
           content:
             application/json:
               schema:
@@ -175,8 +186,8 @@ paths:
       operationId: PATCH-user-borrow
       responses:
         "200":
-          description: get list of books
+          description: update the borrow information of a user
           content:
             application/json:
               schema:
-                $ref: "./user.yaml#/components/schemas/user"
+                $ref: "./borrow.yaml#/components/schemas/borrow"
